# autonomix

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  autonomix.desktop  autonomix.spec  build-deb.sh  build-flatpak.sh  build-packages.sh  build-rpm.sh  install.sh  pubspec.yaml  pyproject.toml  requirements.txt  run.py  uninstall.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/autonomix/: MainActivity.kt
autonomix/: __init__.py  __main__.py
autonomix/core/: __init__.py  database.py  github_api.py  installer.py
autonomix/resources/: __init__.py
autonomix/ui/: __init__.py  add_app_dialog.py  app_card.py  main_window.py  styles.py
build-pkg/: autonomix-0.1.0-py3-none-any.whl  autonomix-0.1.1-py3-none-any.whl
data/: autonomix.desktop
debian/: changelog  control  copyright  rules
flatpak-build/: io.github.plebone.autonomix.yml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: install_type.dart  release.dart  tracked_app.dart
lib/services/: database_service.dart  github_service.dart  installer_service.dart
lib/ui/: home_screen.dart
lib/ui/widgets/: add_app_dialog.dart  app_list_item.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
pkg-build/: autonomix-bin.spec
pkg-build/deb/DEBIAN/: control
pkg-build/deb/usr/share/applications/: autonomix.desktop
releases/v0.3.0/: io.github.plebone.autonomix-0.3.0.flatpak
releases/v0.3.1/: io.github.plebone.autonomix-0.3.1.flatpak
releases/v0.3.2/: io.github.plebone.autonomix-0.3.2.flatpak
releases/v0.3.3/: io.github.plebone.autonomix-0.3.3.flatpak
resources/: io.github.plebone.autonomix.desktop  io.github.plebone.autonomix.metainfo.xml
src/: main.rs
src/core/: database.rs  github_api.rs  installer.rs  mod.rs  models.rs
src/ui/: add_dialog.rs  app_model.rs  app_row.rs  main_window.rs  mod.rs
src/ui/qml/: main.qml
test/models/: tracked_app_test.dart
test/ui/: home_screen_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
