[package]
name = "autonomix"
version = "0.3.1"
edition = "2021"
authors = ["PlebOne"]
description = "A Linux package manager for GitHub releases"
license = "MIT"
repository = "https://github.com/PlebOne/autonomix"

[dependencies]
# GUI - Qt/QML
qmetaobject = "0.2"
cstr = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
url = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
once_cell = "1"
semver = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
